Fixed table layout, so the table-elem can never overflow
Avatar wrapper, because of the img element active pretty weird with
table layout fixed.
Truncating things

--- a/leaderboard/LeaderboardRow/style.scss
+++ b/leaderboard/LeaderboardRow/style.scss
@@ -1,5 +1,6 @@
 .hui-LeaderboardRow {
   display: table;
+  table-layout: fixed;
   width: 100%;
   height: 84px;
   font-family: $font-copy;
@@ -22,10 +23,14 @@
   width: 76px;
   height: 76px;
   display: table-cell;
+
+  img {
+    width: 100%;
+    display: block;
+  }
 }
 
 .hui-LeaderboardRow__details {
-  display: inline-block;
   width: 100%;
   display: table-cell;
   vertical-align: top;
@@ -81,14 +86,17 @@
   vertical-align: middle;
   text-align: right;
   font-size: 20px;
+  width: 100px;
 }
 
 .hui-LeaderboardRow__pageName {
-    font-size: 14px;
+  font-size: 14px;
+  @extend %truncate;
 }
 
 .hui-LeaderboardRow__charityName {
-    font-size: 12px;
+  font-size: 12px;
+  @extend %truncate;
 }
 
 .hui-LeaderboardRow--narrow {
